fixed news feed margins on tablet and mobile sizes

--- a/client/src/apps/components/popApps/popApps.css
+++ b/client/src/apps/components/popApps/popApps.css
@@ -523,7 +523,8 @@
         max-width: 200px;
     }
     #journal-newsfeed {
-        margin-left: -2%;
+        width: 100%;
+        margin-left: -1.5%;
         padding: 2% 0 5% 0%;
     }
 }
